crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__instance_parser__tests__parser-bjt_basic.snap
---
source: crates/spicy_netlist/src/reader/instance_parser.rs
assertion_line: 1325
expression: deck
---
Deck {
    title: "basic bjt",
    node_mapping: NodeMapping {
        nodes: [
            NodeName(
                "0",
            ),
            NodeName(
                "c",
            ),
            NodeName(
                "b",
            ),
            NodeName(
                "e",
            ),
        ],
    },
    commands: [],
    devices: Devices {
        resistors: [],
        capacitors: [],
        inductors: [],
        diodes: [],
        voltage_sources: [],
        current_sources: [],
        bjts: [
            BjtSpec {
                name: "Q1",
                span: Span {
                    start: 47,
                    end: 85,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                collector: NodeIndex(
                    1,
                ),
                base: NodeIndex(
                    2,
                ),
                emitter: NodeIndex(
                    3,
                ),
                model_name: "Qmod",
                model: BjtModel {
                    polarity: Npn,
                    is: Some(
                        Value {
                            value: 1.0,
                            exponent: Some(
                                -16.0,
                            ),
                            suffix: None,
                            scaled: 1e-16,
                        },
                    ),
                    bf: Some(
                        Value {
                            value: 100.0,
                            exponent: None,
                            suffix: None,
                            scaled: 100.0,
                        },
                    ),
                    br: Some(
                        Value {
                            value: 1.0,
                            exponent: None,
                            suffix: None,
                            scaled: 1.0,
                        },
                    ),
                    nf: None,
                    nr: None,
                    xtb: None,
                    xti: None,
                    eg: None,
                    tnom: None,
                },
                area: Some(
                    Value {
                        value: 2.0,
                        exponent: None,
                        suffix: None,
                        scaled: 2.0,
                    },
                ),
                m: Some(
                    Value {
                        value: 5.0,
                        exponent: None,
                        suffix: None,
                        scaled: 5.0,
                    },
                ),
                off: Some(
                    true,
                ),
                ic_vbe: Some(
                    Value {
                        value: 0.7,
                        exponent: None,
                        suffix: None,
                        scaled: 0.7,
                    },
                ),
                ic_vce: Some(
                    Value {
                        value: 1.2,
                        exponent: None,
                        suffix: None,
                        scaled: 1.2,
                    },
                ),
                temp: None,
                dtemp: None,
            },
        ],
    },
}
