crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__instance_parser__tests__parser-params_mixed.snap
---
source: crates/spicy_netlist/src/reader/instance_parser.rs
assertion_line: 1325
expression: deck
---
Deck {
    title: "params mixing",
    node_mapping: NodeMapping {
        nodes: [
            NodeName(
                "0",
            ),
            NodeName(
                "n1",
            ),
            NodeName(
                "n0",
            ),
            NodeName(
                "n2",
            ),
            NodeName(
                "n3",
            ),
            NodeName(
                "n4",
            ),
        ],
    },
    commands: [
        Op(
            OpCommand {
                span: Span {
                    start: 432,
                    end: 434,
                    source_index: SourceFileId(
                        0,
                    ),
                },
            },
        ),
    ],
    devices: Devices {
        resistors: [
            ResistorSpec {
                name: "R1",
                span: Span {
                    start: 40,
                    end: 110,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: Some(
                            Kilo,
                        ),
                        scaled: 1000.0,
                    },
                ),
                model: None,
                ac: Some(
                    Value {
                        value: 2.0,
                        exponent: None,
                        suffix: None,
                        scaled: 2.0,
                    },
                ),
                m: Some(
                    Value {
                        value: 3.0,
                        exponent: None,
                        suffix: None,
                        scaled: 3.0,
                    },
                ),
                scale: Some(
                    Value {
                        value: 4.0,
                        exponent: None,
                        suffix: None,
                        scaled: 4.0,
                    },
                ),
                temp: Some(
                    Value {
                        value: 300.0,
                        exponent: None,
                        suffix: None,
                        scaled: 300.0,
                    },
                ),
                dtemp: Some(
                    Value {
                        value: 10.0,
                        exponent: None,
                        suffix: None,
                        scaled: 10.0,
                    },
                ),
                tc1: Some(
                    Value {
                        value: 0.1,
                        exponent: None,
                        suffix: None,
                        scaled: 0.1,
                    },
                ),
                tc2: Some(
                    Value {
                        value: 0.01,
                        exponent: None,
                        suffix: None,
                        scaled: 0.01,
                    },
                ),
                noisy: Some(
                    true,
                ),
            },
            ResistorSpec {
                name: "R2",
                span: Span {
                    start: 158,
                    end: 189,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 2.0,
                        exponent: None,
                        suffix: Some(
                            Kilo,
                        ),
                        scaled: 2000.0,
                    },
                ),
                model: None,
                ac: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: None,
                        scaled: 1.0,
                    },
                ),
                m: Some(
                    Value {
                        value: 5.0,
                        exponent: None,
                        suffix: None,
                        scaled: 5.0,
                    },
                ),
                scale: Some(
                    Value {
                        value: 280.0,
                        exponent: None,
                        suffix: None,
                        scaled: 280.0,
                    },
                ),
                temp: Some(
                    Value {
                        value: 6.0,
                        exponent: None,
                        suffix: None,
                        scaled: 6.0,
                    },
                ),
                dtemp: Some(
                    Value {
                        value: 0.2,
                        exponent: None,
                        suffix: None,
                        scaled: 0.2,
                    },
                ),
                tc1: Some(
                    Value {
                        value: 0.02,
                        exponent: None,
                        suffix: None,
                        scaled: 0.02,
                    },
                ),
                tc2: Some(
                    Value {
                        value: 0.0,
                        exponent: None,
                        suffix: None,
                        scaled: 0.0,
                    },
                ),
                noisy: None,
            },
            ResistorSpec {
                name: "R3",
                span: Span {
                    start: 191,
                    end: 222,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 3.0,
                        exponent: None,
                        suffix: Some(
                            Kilo,
                        ),
                        scaled: 3000.0,
                    },
                ),
                model: None,
                ac: Some(
                    Value {
                        value: 7.0,
                        exponent: None,
                        suffix: None,
                        scaled: 7.0,
                    },
                ),
                m: Some(
                    Value {
                        value: 9.0,
                        exponent: None,
                        suffix: None,
                        scaled: 9.0,
                    },
                ),
                scale: Some(
                    Value {
                        value: 10.0,
                        exponent: None,
                        suffix: None,
                        scaled: 10.0,
                    },
                ),
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: Some(
                    true,
                ),
            },
            ResistorSpec {
                name: "R3",
                span: Span {
                    start: 224,
                    end: 247,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: Some(
                    Value {
                        value: 2.0,
                        exponent: None,
                        suffix: Some(
                            Kilo,
                        ),
                        scaled: 2000.0,
                    },
                ),
                model: Some(
                    ResistorModel {
                        resistance: None,
                        tc1: Some(
                            Value {
                                value: 345.0,
                                exponent: None,
                                suffix: None,
                                scaled: 345.0,
                            },
                        ),
                        tc2: None,
                        w: None,
                        l: None,
                        tnom: None,
                    },
                ),
                ac: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: None,
                        scaled: 1.0,
                    },
                ),
                m: Some(
                    Value {
                        value: 5.0,
                        exponent: None,
                        suffix: None,
                        scaled: 5.0,
                    },
                ),
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
            ResistorSpec {
                name: "R4",
                span: Span {
                    start: 249,
                    end: 268,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    1,
                ),
                negative: NodeIndex(
                    2,
                ),
                resistance: None,
                model: Some(
                    ResistorModel {
                        resistance: None,
                        tc1: Some(
                            Value {
                                value: 345.0,
                                exponent: None,
                                suffix: None,
                                scaled: 345.0,
                            },
                        ),
                        tc2: None,
                        w: None,
                        l: None,
                        tnom: None,
                    },
                ),
                ac: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: None,
                        scaled: 1.0,
                    },
                ),
                m: Some(
                    Value {
                        value: 5.0,
                        exponent: None,
                        suffix: None,
                        scaled: 5.0,
                    },
                ),
                scale: None,
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                noisy: None,
            },
        ],
        capacitors: [
            CapacitorSpec {
                name: "C1",
                span: Span {
                    start: 270,
                    end: 333,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    3,
                ),
                negative: NodeIndex(
                    2,
                ),
                capacitance: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: Some(
                            Micro,
                        ),
                        scaled: 1e-6,
                    },
                ),
                model: None,
                mname: None,
                m: Some(
                    Value {
                        value: 2.0,
                        exponent: None,
                        suffix: None,
                        scaled: 2.0,
                    },
                ),
                scale: Some(
                    Value {
                        value: 3.0,
                        exponent: None,
                        suffix: None,
                        scaled: 3.0,
                    },
                ),
                temp: Some(
                    Value {
                        value: 300.0,
                        exponent: None,
                        suffix: None,
                        scaled: 300.0,
                    },
                ),
                dtemp: Some(
                    Value {
                        value: 5.0,
                        exponent: None,
                        suffix: None,
                        scaled: 5.0,
                    },
                ),
                tc1: Some(
                    Value {
                        value: 0.1,
                        exponent: None,
                        suffix: None,
                        scaled: 0.1,
                    },
                ),
                tc2: Some(
                    Value {
                        value: 0.01,
                        exponent: None,
                        suffix: None,
                        scaled: 0.01,
                    },
                ),
                ic: Some(
                    Value {
                        value: 0.5,
                        exponent: None,
                        suffix: None,
                        scaled: 0.5,
                    },
                ),
            },
            CapacitorSpec {
                name: "C2",
                span: Span {
                    start: 335,
                    end: 368,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    3,
                ),
                negative: NodeIndex(
                    2,
                ),
                capacitance: Some(
                    Value {
                        value: 2.0,
                        exponent: None,
                        suffix: Some(
                            Micro,
                        ),
                        scaled: 2e-6,
                    },
                ),
                model: None,
                mname: None,
                m: Some(
                    Value {
                        value: 4.0,
                        exponent: None,
                        suffix: None,
                        scaled: 4.0,
                    },
                ),
                scale: Some(
                    Value {
                        value: 5.0,
                        exponent: None,
                        suffix: None,
                        scaled: 5.0,
                    },
                ),
                temp: Some(
                    Value {
                        value: 260.0,
                        exponent: None,
                        suffix: None,
                        scaled: 260.0,
                    },
                ),
                dtemp: Some(
                    Value {
                        value: 3.0,
                        exponent: None,
                        suffix: None,
                        scaled: 3.0,
                    },
                ),
                tc1: Some(
                    Value {
                        value: 0.2,
                        exponent: None,
                        suffix: None,
                        scaled: 0.2,
                    },
                ),
                tc2: Some(
                    Value {
                        value: 0.02,
                        exponent: None,
                        suffix: None,
                        scaled: 0.02,
                    },
                ),
                ic: Some(
                    Value {
                        value: 0.1,
                        exponent: None,
                        suffix: None,
                        scaled: 0.1,
                    },
                ),
            },
            CapacitorSpec {
                name: "C3",
                span: Span {
                    start: 370,
                    end: 400,
                    source_index: SourceFileId(
                        0,
                    ),
                },
                positive: NodeIndex(
                    3,
                ),
                negative: NodeIndex(
                    2,
                ),
                capacitance: Some(
                    Value {
                        value: 3.0,
                        exponent: None,
                        suffix: Some(
                            Micro,
                        ),
                        scaled: 3e-6,
                    },
                ),
                model: None,
                mname: None,
                m: Some(
                    Value {
                        value: 1.0,
                        exponent: None,
                        suffix: None,
                        scaled: 1.0,
                    },
                ),
                scale: Some(
                    Value {
                        value: 10.0,
                        exponent: None,
                        suffix: None,
                        scaled: 10.0,
                    },
                ),
                temp: None,
                dtemp: None,
                tc1: None,
                tc2: None,
                ic: Some(
                    Value {
                        value: 0.3,
                        exponent: None,
                        suffix: None,
                        scaled: 0.3,
                    },
                ),
            },
        ],
        inductors: [],
        diodes: [],
        voltage_sources: [
            IndependentSourceSpec {
                name: "V1",
                positive: NodeIndex(
                    4,
                ),
                negative: NodeIndex(
                    0,
                ),
                dc: Some(
                    Constant(
                        Value {
                            value: 5.0,
                            exponent: None,
                            suffix: None,
                            scaled: 5.0,
                        },
                    ),
                ),
                ac: None,
            },
            IndependentSourceSpec {
                name: "V2",
                positive: NodeIndex(
                    4,
                ),
                negative: NodeIndex(
                    5,
                ),
                dc: Some(
                    Constant(
                        Value {
                            value: 1.2,
                            exponent: None,
                            suffix: Some(
                                Kilo,
                            ),
                            scaled: 1200.0,
                        },
                    ),
                ),
                ac: None,
            },
        ],
        current_sources: [],
        bjts: [],
    },
}
